src/objects/Form_Section__c.object
<CustomObject>
    <fields>
        <fullName>Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permission to Create Records</description>
        <inlineHelpText>Can Users create these records?</inlineHelpText>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permission to Delete Records</description>
        <inlineHelpText>Can Users delete these records?</inlineHelpText>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <description>The header of the section</description>
        <inlineHelpText>The header of the section</inlineHelpText>
        <label>Header</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permission to Update Records</description>
        <inlineHelpText>Can Users update these records?</inlineHelpText>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <label>Where Clause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Section</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Form__c</columns>
        <columns>Header__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Update__c</columns>
        <columns>Where_Clause__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FS-{000}</displayFormat>
        <label>Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>